# rfp-factory

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
app/: config.py  main.py
data/: company_profile.example.json  decisions.example.json  internal_pricing_rules.example.json  teaming_partners.example.json
docs/: ARCHITECTURE_DIAGRAM.md  RFP_System_Architecture.md
scripts/: _build_brand_assets.py  _diag_truncation_source.py  _e2e_autoloop_test.py  _e2e_cost_analyst_test.py  _e2e_cost_reviewer_test.py  _e2e_cost_writer_test.py  _e2e_deterministic_suite.py  _e2e_harness.py  _e2e_live_helpers.py  _e2e_market_research_test.py  _e2e_pipeline_test.py  _e2e_service_test.py  _e2e_shortfall_parallel_test.py  _e2e_ui_test.py  _e2e_validator_test.py  _open_app_window.ps1  backup.py  evaluate_compliance_models.py  launcher_preflight.py  live_provider_contract_smoke.py  prepare_demo_data.py  run_app.bat  run_demo.bat  run_e2e_twice.py  wipe_test_data.py
tests/: conftest.py  test_amendment_apply.py  test_amendment_delta_extraction.py  test_amendment_section_m_trigger.py  test_amendment_service_dedup.py  test_amendment_storage_atomic.py  test_anthropic_complete_retry.py  test_archive_immutability.py  test_backup.py  test_citation_check.py  test_compliance_completeness.py  test_compliance_drift_flag.py  test_compliance_extraction_coverage.py  test_compliance_review_gold.py  test_compliance_review_resilience.py  test_concurrency_guards.py  test_config_data_dir.py  test_cost_matrix.py  test_cost_matrix_integrity.py  test_cost_matrix_lifecycle.py  test_cost_review_rerun_triage.py  test_debug_dump_data_dir.py  test_decisions_ui_accessibility.py  test_demo_mode.py  test_e2e_browser_diagnostics.py  test_e2e_runner_gate.py  test_file_format_contracts.py  test_gemini_tool_contract.py  test_intake_fail_closed.py  test_intake_metadata_privacy.py  test_kb_creation_atomic.py  test_kb_ingest_truthful.py  test_launcher_preflight.py  test_llm_cost_tracking.py  test_managed_deletion_safety.py  (+30 more)
(+207 files in other folders)
